packages/transpiler/grammar/test/corpus/complete_programs.txt
=====================================
Complete MVP program with flexible syntax
=====================================

mcp filesystem {
  command: "npx",
  args: ["-y", "@modelcontextprotocol/server-filesystem"],
  timeout: 5000
}

message = "Hello from MCP Script!"
filesystem.writeFile("greeting.txt", message)
content = filesystem.readFile("greeting.txt")
print(content)

---

(source_file
  (statement
    (mcp_declaration
      (identifier)
      (object_literal
        (property_list
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (literal
                (array_literal
                  (expression
                    (literal
                      (string
                        (double_quoted_string))))
                  (expression
                    (literal
                      (string
                        (double_quoted_string))))))))
          (property
            (identifier)
            (expression
              (literal
                (number))))))))
  (statement
    (assignment
      (assignment_target
        (identifier))
      (expression
        (literal
          (string
                  (double_quoted_string))))))
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (member_expression
              (expression
                (identifier))
              (identifier)))
          (argument_list
            (expression
              (literal
                (string
                  (double_quoted_string))))
            (expression
              (identifier)))))))
  (statement
    (assignment
      (assignment_target
        (identifier))
      (expression
        (call_expression
          (expression
            (member_expression
              (expression
                (identifier))
              (identifier)))
          (argument_list
            (expression
              (literal
                (string
                  (double_quoted_string)))))))))
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (identifier))
          (argument_list
            (expression
              (identifier))))))))

=====================================
Mixed expressions
=====================================

debug = true
result = process(getData(), "format")
print("Result:", result)

---

(source_file
  (statement
    (assignment
      (assignment_target
        (identifier))
      (expression
        (literal
          (boolean)))))
  (statement
    (assignment
      (assignment_target
        (identifier))
      (expression
        (call_expression
          (expression
            (identifier))
          (argument_list
            (expression
              (call_expression
                (expression
                  (identifier))))
            (expression
              (literal
                (string
                  (double_quoted_string)))))))))
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (identifier))
          (argument_list
            (expression
              (literal
                (string
                  (double_quoted_string))))
            (expression
              (identifier))))))))
