packages/transpiler/grammar/test/corpus/member_expressions.txt
=====================================
Simple member expression call
=====================================

server.method("arg")

---

(source_file
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (member_expression
              (expression
                (identifier))
              (identifier)))
          (argument_list
            (expression
              (literal
                (string
                  (double_quoted_string))))))))))

=====================================
Member call with mixed arguments
=====================================

server.method("greeting.txt", message)

---

(source_file
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (member_expression
              (expression
                (identifier))
              (identifier)))
          (argument_list
            (expression
              (literal
                (string
                  (double_quoted_string))))
            (expression
              (identifier))))))))

=====================================
Chained member expression
=====================================

api.users.get()

---

(source_file
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (member_expression
              (expression
                (member_expression
                  (expression
                    (identifier))
                  (identifier)))
              (identifier))))))))
