packages/transpiler/grammar/test/corpus/model_declarations.txt
Simple model declaration
=====================================

model claude {
  provider: "anthropic",
  model: "claude-3-opus-20240229"
}

---

(source_file
  (statement
    (model_declaration
      (identifier)
      (object_literal
        (property_list
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string))))))))))

=====================================
Model with API key from environment
=====================================

model gpt4 {
  provider: "openai",
  apiKey: env.OPENAI_API_KEY,
  temperature: 0.7
}

---

(source_file
  (statement
    (model_declaration
      (identifier)
      (object_literal
        (property_list
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (member_expression
                (expression
                  (identifier))
                (identifier))))
          (property
            (identifier)
            (expression
              (literal
                (number)))))))))

=====================================
Model with multiple configuration parameters
=====================================

model localLlama {
  provider: "ollama",
  model: "llama2:70b",
  temperature: 0.3,
  maxTokens: 4000
}

---

(source_file
  (statement
    (model_declaration
      (identifier)
      (object_literal
        (property_list
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (literal
                (number))))
          (property
            (identifier)
            (expression
              (literal
                (number)))))))))

=====================================
Empty model declaration
=====================================

model simple {}

---

(source_file
  (statement
    (model_declaration
      (identifier)
      (object_literal))))

=====================================
Model with custom headers object
=====================================

model custom {
  provider: "custom",
  headers: {
    Authorization: "Bearer token"
  }
}

---

(source_file
  (statement
    (model_declaration
      (identifier)
      (object_literal
        (property_list
          (property
            (identifier)
            (expression
              (literal
                (string
                  (double_quoted_string)))))
          (property
            (identifier)
            (expression
              (literal
                (object_literal
                  (property_list
                    (property
                      (identifier)
                      (expression
                        (literal
                          (string
                            (double_quoted_string)))))))))))))))
